add two fileds to user profile  #16315
