# public/doc/swagger.json
@@ -554,6 +554,14 @@
                     "type": "boolean",
                     "default": true,
                     "description": "Enabled push notice"
+                },
+                "threeKStepPersent": {
+                    "type": "number",
+                    "default": 0
+                },
+                "sixKStepPersent": {
+                    "type": "number",
+                    "default": 0
                 }
             },
             "required": [
@@ -621,6 +629,14 @@
                     "type": "boolean",
                     "default": true,
                     "description": "Enabled push notice"
+                },
+                "threeKStepPersent": {
+                    "type": "number",
+                    "default": 0
+                },
+                "sixKStepPersent": {
+                    "type": "number",
+                    "default": 0
                 }
             }
         },
